--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
     </nav>
     <main class="main">
         <section>
-            <input type="text" placeholder="City">
+            <input id="location" type="text" placeholder="City">
 
         </section>
+        <div>
+            <button id="btn">Search</button>
+        </div>
     </main>
     <section>
 
@@ -32,7 +35,7 @@
     <footer>
 
     </footer>
-
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="asset/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
    
