I made  it so the weather and longitude and latitude will append to the html document. I also made it so if a city is not entered then the application will not continue forward and will prompt you to enter a city, I was sucessfully able to get the data from the input to pick the correct city

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         </ul>
     </nav>
     <main class="main">
-        <section>
+        <form>
             <input id="location" type="text" placeholder="City">
 
-        </section>
-        <div>
+        </form>
+        <section>
             <button id="btn">Search</button>
-        </div>
+        </section>
     </main>
-    <section>
-
+    <section class="weatherInfo">
+        
     </section>
 
     <footer>
