Added code to append the forecast for the next 5 days, and added the correct weather conditions requested.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
     <header>
         <h1><strong>What's the Weather???</strong></h1>
     </header>
-    <nav class="navBar">
-        <ul>
-            <li>
-
-            </li>
-        </ul>
-    </nav>
+   
     <main class="main">
         <form>
             <input id="location" type="text" placeholder="City">
@@ -30,6 +24,16 @@
     </main>
     <section class="weatherInfo">
         
+    </section>
+    <section class="forecastInfo">
+        <ul id="cityInfoList">
+
+        </ul>
+
+    </section>
+    <section id="searchHistory">
+
+
     </section>
 
     <footer>
