made local storage an array, made it so local storage wouldn't overwrite previous input, made it so list of times updated for the weather and didn't add on to what was already there.

--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
         </ul>
 
     </section>
+<div>
+    <h2>Search History</h2>
     <section id="searchHistory">
+        
 
 
     </section>
-
+</div>
     <footer>
 
     </footer>
